--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,11 +23,8 @@ android {
     }
 }
 ext {
-    koinVersion = '2.0.1'
     andxVersion = '1.0.0'
     andxCompatVersion = '1.0.2'
-    coroutinesVersion = '1.3.0-M2'
-    lifecycle_version = '2.2.0-alpha04'
 
 }
 dependencies {
@@ -35,20 +32,15 @@ dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.appcompat:appcompat:$andxCompatVersion"
     implementation "androidx.recyclerview:recyclerview:$andxVersion"
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:$andxVersion"
-    implementation "androidx.cardview:cardview:$andxVersion"
-    implementation 'androidx.core:core-ktx:1.0.2'
+    implementation "androidx.core:core-ktx:$andxVersion"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
-
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
+    androidTestImplementation 'androidx.test:rules:1.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso.idling:idling-concurrent:3.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation project(path: ':network')
 }
